--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,8 @@
     "max-len": ["error", { "code": 90 }],
     "object-curly-spacing": "off",
     "require-jsdoc": "off",
-    "linebreak-style": ["error", "windows"]
+    "linebreak-style": ["error", "windows"],
+    "arrow-parens": "off"
   },
   "extends": ["eslint:recommended", "google"]
 }
