--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,8 @@
     "max-len": ["error", { "code": 120 }],
     "object-curly-spacing": "off",
     "require-jsdoc": "off",
-    "arrow-parens": "off"
+    "arrow-parens": "off",
+    "no-invalid-this": "off"
   },
   "extends": ["eslint:recommended", "google"]
 }
