--- a/package.json
+++ b/package.json
@@ -1,51 +1,52 @@
 {
-   "name": "excel",
-   "version": "1.0.0",
-   "description": "Vanilla JavaScript Excel App",
-   "main": "app.js",
-   "scripts": {
-      "build": "cross-env NODE_ENV=production webpack --mode production ",
-      "dev": "webpack --mode development",
-      "start": "webpack-dev-server --mode development"
-   },
-   "repository": {
-      "type": "git",
-      "url": "git+https://github.com/Hardart/excel.git"
-   },
-   "keywords": [
-      "excel",
-      "JavaScript",
-      "course"
-   ],
-   "author": "Artem Shakirov <hardart@bk.ru>",
-   "license": "ISC",
-   "bugs": {
-      "url": "https://github.com/Hardart/excel/issues"
-   },
-   "homepage": "https://github.com/Hardart/excel#readme",
-   "devDependencies": {
-      "@babel/core": "^7.19.3",
-      "@babel/eslint-parser": "^7.19.1",
-      "@babel/preset-env": "^7.19.3",
-      "@fullhuman/postcss-purgecss": "^5.0.0",
-      "autoprefixer": "^10.4.12",
-      "babel-loader": "^8.2.5",
-      "clean-webpack-plugin": "^4.0.0",
-      "cross-env": "^7.0.3",
-      "css-loader": "^6.7.1",
-      "eslint": "^8.25.0",
-      "eslint-config-google": "^0.14.0",
-      "eslint-webpack-plugin": "^3.2.0",
-      "html-webpack-plugin": "^5.5.0",
-      "mini-css-extract-plugin": "^2.6.1",
-      "postcss": "^8.4.17",
-      "postcss-loader": "^7.0.1",
-      "postcss-preset-env": "^7.8.2",
-      "sass": "^1.55.0",
-      "sass-loader": "^13.1.0",
-      "webpack": "^5.74.0",
-      "webpack-cli": "^4.10.0",
-      "webpack-dev-server": "^4.11.1"
-   },
-   "browserslist": "last 4 version"
+  "name": "excel",
+  "version": "1.0.0",
+  "description": "Vanilla JavaScript Excel App",
+  "main": "app.js",
+  "scripts": {
+    "build": "cross-env NODE_ENV=production webpack --mode production ",
+    "dev": "webpack --mode development",
+    "start": "webpack-dev-server --mode development",
+    "img": "node public.data.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Hardart/excel.git"
+  },
+  "keywords": [
+    "excel",
+    "JavaScript",
+    "course"
+  ],
+  "author": "Artem Shakirov <hardart@bk.ru>",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Hardart/excel/issues"
+  },
+  "homepage": "https://github.com/Hardart/excel#readme",
+  "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/preset-env": "^7.19.3",
+    "@fullhuman/postcss-purgecss": "^5.0.0",
+    "autoprefixer": "^10.4.12",
+    "babel-loader": "^8.2.5",
+    "clean-webpack-plugin": "^4.0.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.7.1",
+    "eslint": "^8.25.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "postcss": "^8.4.17",
+    "postcss-loader": "^7.0.1",
+    "postcss-preset-env": "^7.8.2",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.1.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
+  },
+  "browserslist": "last 4 version"
 }
