--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,8 @@
     "object-curly-spacing": "off",
     "require-jsdoc": "off",
     "arrow-parens": "off",
-    "no-invalid-this": "off"
+    "no-invalid-this": "off",
+    "indent": "off"
   },
   "extends": ["eslint:recommended", "google"]
 }
