new rules for eslint

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,8 @@
     "require-jsdoc": "off",
     "arrow-parens": "off",
     "no-invalid-this": "off",
-    "indent": "off"
+    "indent": "off",
+    "space-before-function-paren": "off"
   },
   "extends": ["eslint:recommended", "google"]
 }
