--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,9 @@
     "arrow-parens": "off",
     "no-invalid-this": "off",
     "indent": "off",
-    "space-before-function-paren": "off"
+    "space-before-function-paren": "off",
+    "comma-dangle": "off",
+    "valid-jsdoc": "off"
   },
   "extends": ["eslint:recommended", "google"]
 }
