--- a/package.json
+++ b/package.json
@@ -44,9 +44,14 @@
     "postcss-preset-env": "^7.8.2",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
+    "typescript": "^4.8.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
   },
-  "browserslist": "last 4 version"
+  "browserslist": "last 4 version",
+  "dependencies": {
+    "uikit": "^3.15.11"
+  },
+  "types": "app.d.ts"
 }
